--- a/language/i18n_sr_BA.json
+++ b/language/i18n_sr_BA.json
@@ -3343,21 +3343,21 @@
     "send_notification": "Pošalji obaveštenje",
     "example:send_air_conditioner_is_on": "Primer: pošalji „Klima uređaj je uključen“",
     "input_message_content._example:_no.3_air_conditioner_is_on": "Sadržaj ulazne poruke. Primer: BR.3 Klima uređaj je uključen.",
-    "enter_your_room_name_key": "",
-    "after_sale_report_failed_desc": "",
-    "country_and_region": "",
+    "enter_your_room_name_key": "унесите назив своје собе",
+    "after_sale_report_failed_desc": "Дошло је до неочекиване грешке. Покушајте поново или контактирајте постпродајне службе.",
+    "country_and_region": "Држава / Регион",
     "rf_ai": "AI",
     "exit_ai_mode_toast": "Ručno podešavanje temperature  Izađite iz ECO režima",
-    "rf_fuzzy_desc": "",
+    "rf_fuzzy_desc": "Температура фрижидера се аутоматски пребацује на 5°Ц, а замрзивача на -18°Ц, то је паметан режим за одржавање хране у најбољем стању.",
     "after_sale_unsupported_ts_tips": "Žao nam je, ali informacije o rešavanju problema za ovaj uređaj trenutno nisu dostupne. Naš tim radi na tome da uskoro pruži podršku za ovaj uređaj.",
     "after_sale_unsupported_ri_tips": "Žao nam je, ali prijavljivanje problema za ovaj uređaj trenutno nije dostupno. Naš tim radi na tome da uskoro pruži podršku za ovaj uređaj.",
     "degerming": "Dezinfekcija",
     "no_spin": "Bez centrifuge",
     "wm_program_mode_normal_desc": "Ovaj režim je podrazumevani i neće vršiti nikakve promene u odabranom programu.",
-    "wm_program_mode_green_desc": "",
-    "wm_program_mode_speed_desc": "",
-    "wm_program_mode_night_desc": "",
-    "wm_program_mode_intensive_desc": "",
+    "wm_program_mode_green_desc": "Прање које штеди енергију; дуже време прања, мања потрошња воде.",
+    "wm_program_mode_speed_desc": "Прање које штеди време; краће време прања, већа потрошња воде и енергије). Напомена: У програму Памук препоручујемо пола пуњења.",
+    "wm_program_mode_night_desc": "Прање које смањује буку и продужава време прања.",
+    "wm_program_mode_intensive_desc": "Прање које побољшава перформансе чишћења, са додатном водом и продуженим временом прања.",
     "default": "Uobičajeno",
     "if_key": "ако",
     "enable_key": "омогући",
@@ -3367,7 +3367,7 @@
     "send_notifi_example_key": "Пример: пошаљи “Клима уређај је укључен”",
     "add_this_routine_to_home_page_key": "Želite li da dodate ovu rutinu na matičnu stranicu?",
     "add_trigger_key": "Додај оквир",
-    "select_city_key": "",
+    "select_city_key": "Изаберите Град",
     "add_routines_instrcuction_key": "Dodajte rutine i kreirajte rutine sa svojim uređajima",
     "every_day_at_key ": "Сваки дан у ##",
     "automation_condition_des_condition_key": "када ## @@ **",
@@ -3379,96 +3379,96 @@
     "select_logic_relation_ship": "Изаберите логички однос",
     "no_scene_key": "нема сцене",
     "add_new_scene_key": "додај нову сцену",
-    "wm_stain_program_type_temp": "",
+    "wm_stain_program_type_temp": "ВРСТА МРЉЕ, ТКАНИНА И ТЕМП",
     "wm_stain_program_desc": "Odaberite vrstu mrlje i tkaninu/temperaturu ispod. Mašina za pranje veša će tada automatski izabrati optimalni program.",
-    "stain_type": "",
-    "fabric_temperature": "",
+    "stain_type": "Тип мрља",
+    "fabric_temperature": "Тканина и температура",
     "high_water_level": "Visok nivo vode",
     "small_load": "Malo opterećenje",
-    "small_load_tips": "",
-    "himit2": "",
+    "small_load_tips": "Користите ову функцију када перете малу количину (максимално 2,5 кг). Ово ће скратити дужину програма и уштедети енергију.",
+    "himit2": "Хи-Мит ИИ",
     "himit2_setup1": "Uverite se da je Himit adapter uključen, pritisnite i držite dugme za resetovanje 3 sekunde dok WLAN lampica ne počne da treperi.",
-    "himit2_setup2": "",
+    "himit2_setup2": "Хи-Мит ИИ је повезан на мрежни кабл.",
     "choose_net_method": "Izaberite mrežnu metodu",
-    "wifi": "",
-    "wired": "",
-    "appliance_been_found": "",
-    "wifi_id": "",
-    "dw_remote_control_content": "",
-    "dw_offline_title": "",
-    "dw_offline_content1": "",
-    "dw_offline_content2": "",
-    "dw_offline_content3": "",
-    "security_upgrade2": "",
-    "security_upgrade2_content": "",
+    "wifi": "Ви-Фи",
+    "wired": "Виред",
+    "appliance_been_found": "Пронађен је уређај, изаберите уређај за додавање.",
+    "wifi_id": "ВиФи ИД:",
+    "dw_remote_control_content": "Притисните дугме „Даљински“ на контролној табли уређаја да бисте омогућили.",
+    "dw_offline_title": "Ваш уређај је ван мреже. Молимо проверите:",
+    "dw_offline_content1": "Ваш уређај је укључен и укључен.",
+    "dw_offline_content2": "Ваш Ви-Фи је омогућен и повезан.",
+    "dw_offline_content3": "Ако сте недавно променили лозинку, проверите лозинку за Ви-Фи.",
+    "security_upgrade2": "БЕЗБЕДНОСНА НАДГРАДЊА",
+    "security_upgrade2_content": "Надоградили смо безбедносне системе и омогућили јединствену пријаву за све наше платформе. Акција је урађена како бисмо побољшали заштиту наших дигиталних платформи и омогућили вам несметано кретање између наших брендова. Као део безбедносне надоградње, молимо вас да ресетујете лозинку свог налога од 15. јула 2023. Ако сте већ ресетовали лозинку, нису потребне никакве нове радње. Ако немате налог, прво се морате регистровати. Хвала.",
     "article_number_not_valid": "Broj artikla nije važeći",
     "auto_super_rinse": "Automatsko super ispiranje",
-    "auto_super_rinse_desc": "",
-    "enable_auto_super_rinse": "",
-    "dw_super_rinse": "",
+    "auto_super_rinse_desc": "Функција помаже да се одећа добро очисти, без остављања остатака детерџента или прљавштине.",
+    "enable_auto_super_rinse": "Омогућите/онемогућите аутоматско супер испирање",
+    "dw_super_rinse": "Супер испирање",
     "dw_uv_mode": "UV режим",
-    "dw_storage_mode": "",
+    "dw_storage_mode": "Режим складиштења",
     "air_shower": "Vazdušni tuš",
-    "enable_air_shower": "",
-    "air_shower_desc": "",
+    "enable_air_shower": "Омогућите/онемогућите ваздушни туш",
+    "air_shower_desc": "Ова функција може помоћи да се побољша ефикасност машине за прање веша смањењем оптерећења циклуса центрифуге, што може смањити хабање машине и продужити њен животни век.",
     "hum_safe_range": "Bezbedan raspon za dugotrajno skladištenje vinskih boca je između 50% i 80%. Kratak pad vlažnosti neće uticati na kvalitet. Ovo se može desiti prilikom otvaranja vrata.",
     "use_humidity": "Koristite kutiju za vlažnost da regulišete vlažnost",
     "same_day": "Isti dan",
     "w_temp_set": "Koju temperaturu postaviti?",
     "eco_meter": "Eco Meter",
     "asko_eco_meter_desc": "## je koristan pametni indikator za određivanje vašeg uticaja na životnu sredinu na osnovu odabranog programa i dodatnih opcija kada je u pitanju potrošnja energije, vode i deterdženta.",
-    "wm86_autodose_desc": "",
-    "enable_auto_dose": "",
-    "enable_auto_dose_desc": "",
-    "tank_refilled_tips": "",
-    "dosing_type": "",
-    "dose_level": "",
-    "tank_a_dosing_type_desc": "",
-    "tank_b_dosing_type_desc": "",
-    "tank_a_dose_level_desc": "",
-    "tank_b_dose_level_desc": "",
-    "program_auto_dose_desc": "",
-    "click_here": "",
-    "oven_hi8_setup_1": "",
-    "oven_hi8_setup_2": "",
+    "wm86_autodose_desc": "Уместо да се борите, пустите машину за прање веша да одмери тачно праву дозу детерџента. Наше машине за прање веша са системом Ауто Досе мере детерџент у односу на количину прања, ниво прљавштине, тврдоћу воде, врсту програма и температуру. Увек савршена доза и нема више предозирања. Овде можете подесити подразумеване поставке за аутоматску дозу.",
+    "enable_auto_dose": "Омогућите/онемогућите аутоматску дозу",
+    "enable_auto_dose_desc": "Ово ће омогућити/онемогућити на вашем уређају.",
+    "tank_refilled_tips": "Напомена: ## треба допунити",
+    "dosing_type": "Тип дозирања",
+    "dose_level": "Ниво дозе",
+    "tank_a_dosing_type_desc": "Овде дефинишете који тип детерџента ће се користити за резервоар А. Напомена: Омекшивач се може користити само за резервоар Б.",
+    "tank_b_dosing_type_desc": "Овде дефинишете који тип детерџента/омекшивача ће се користити за резервоар Б.",
+    "tank_a_dose_level_desc": "Овде дефинишете подразумевани ниво дозирања на основу коришћеног детерџента. Напомена: Свака марка детерџента има различиту дозу. Пронађите дозу на етикети.",
+    "tank_b_dose_level_desc": "Овде дефинишете подразумевани ниво дозирања на основу коришћеног детерџента/омекшивача. Напомена: Свака марка детерџента/омекшивача има различиту дозу. Пронађите дозу на етикети.",
+    "program_auto_dose_desc": "Аутоматска доза је подразумевано изабрана за овај програм. Можете одабрати да га укључите/искључите испод овог прања. Ако желите да промените подразумеване поставке за аутоматско дозирање",
+    "click_here": "кликните овде",
+    "oven_hi8_setup_1": "Подесите уређај на нормалне услове рада.\n Додирните икону менија.",
+    "oven_hi8_setup_2": "Додирните и држите Ви-Фи икону око 3 секунде док не дође до „Ц“ на временској линији.",
     "oven_hi8_setup_3": "Mreža uređaja je sada otvorena za povezivanje. \nKliknite na DALJE da nastavite.",
-    "oven_hi8_pair_2": "",
-    "oven_hi8_pair_3": "",
-    "program_tank_a_desc": "",
-    "program_tank_b_desc": "",
-    "dirt_level": "",
-    "dirt_level_desc": "",
+    "oven_hi8_pair_2": "Додирните и држите Ви-Фи икону око 6 секунди док не дође до „П“ на временској линији.",
+    "oven_hi8_pair_3": "Уређај је сада спреман за упаривање 3 минута.\n Кликните на СЛЕДЕЋЕ да наставите.",
+    "program_tank_a_desc": "Овде можете да укључите/искључите аутоматско дозирање на резервоару А за ово прање.",
+    "program_tank_b_desc": "Овде можете да укључите/искључите аутоматско дозирање на резервоару Б за ово прање.",
+    "dirt_level": "Ниво прљавштине",
+    "dirt_level_desc": "Овде можете подесити подразумевани ниво прљавштине за ово прање.",
     "unit_settings": "Podešavanja jedinice",
     "weight": "Težina",
     "liquid": "Tečnost",
-    "super": "",
+    "super": "супер",
     "wash_dry_instruction": "Kada je WashDry Sync uključen, vaš program pranja se prenosi u izabranu mašinu za sušenje veša nakon što se pranje završi.",
-    "appliance_is_not_standby": "",
-    "appliance_is_not_standby_desc": "",
-    "dev_inverter": "",
-    "how_to": "",
-    "follow_these_steps": "",
-    "select_the_type_of_pizza": "",
-    "select_browning_level": "",
-    "put_the_baking": "",
-    "overview_the_pizza": "",
-    "do_not_put_pizza": "",
-    "select_the_type_of_frozen": "",
-    "do_not_read_packaging": "",
-    "cheese_pizza": "",
-    "meat_pizza": "",
-    "veggie_pizza": "",
-    "seafood_pizza": "",
-    "fresh_pizza": "",
-    "frozen_pizza": "",
+    "appliance_is_not_standby": "Уређај се тренутно користи",
+    "appliance_is_not_standby_desc": "Да бисте могли да мењате програме, уверите се да је уређај у режиму приправности или искључен.",
+    "dev_inverter": "Инвертер",
+    "how_to": "Како да ?",
+    "follow_these_steps": "Пратите ове кораке да бисте направили најбољу пицу.",
+    "select_the_type_of_pizza": "Изаберите врсту пице коју желите да припремите.",
+    "select_browning_level": "Изаберите ниво тамњења. Ниво запечености утиче на трајање печења.",
+    "put_the_baking": "Ставите плех на горњи ниво у рерну пре почетка.",
+    "overview_the_pizza": "Преглед подешавања програма за пицу.",
+    "do_not_put_pizza": "Не стављајте пицу у рерну пре или током претходног загревања!",
+    "select_the_type_of_frozen": "Изаберите врсту замрзнуте пице.",
+    "do_not_read_packaging": "Немојте читати упутства на паковању.",
+    "cheese_pizza": "Пизза са сиром",
+    "meat_pizza": "Месна пица",
+    "veggie_pizza": "Вегетаријанска пица",
+    "seafood_pizza": "Пица са морским плодовима",
+    "fresh_pizza": "Фресх Пизза",
+    "frozen_pizza": "Фрозен Пизза",
     "timer_and_scheduler": "Tajmer & Planer",
     "unit_will_start": "Jedinica će početi od",
     "unit_will_stop": "Jedinica će se zaustaviti na",
     "start_successfully": "Započni uspešno",
-    "quick_timer_1": "",
+    "quick_timer_1": "Брзи тајмер 1",
     "quick_timer": "Brzi tajmer",
     "scheduler": "Planer",
-    "scheduling_settings": "",
+    "scheduling_settings": "Подешавања планирања",
     "device_connect_network_tips": "Молимо вас да се уверите да је уређај повезан на мрежу. Одржавајте нормалан сигнал рутера од 2.4Hz.",
     "please_enter_wifiid": "Молимо вас унесите Wifi идентификатор.",
     "wifiid_verify_code_hint": "6-цифрени верификациони код",
@@ -3505,36 +3505,36 @@
     "inverter_board": "Inverter tabla",
     "clean_status": "Čist status",
     "tomorrow": "Sutra",
-    "have_added_x_inverters": "",
-    "requst_qr_code_from_supplier": "",
-    "have_qr_code": "",
-    "name_assignment_your_device": "",
-    "name_and_assign_to_room": "",
-    "fridge_refr_dry_wet_room_sens_failure": "",
-    "fridge_refr_var_room_sens_failure": "",
+    "have_added_x_inverters": "Додали сте *** Инвертер(е).",
+    "requst_qr_code_from_supplier": "Затражите КР код од инсталатера.",
+    "have_qr_code": "Имам КР код",
+    "name_assignment_your_device": "Именујте и доделите свој уређај",
+    "name_and_assign_to_room": "Именујте свој уређај и доделите га соби.",
+    "fridge_refr_dry_wet_room_sens_failure": "Паметни сензор влажности фиоке",
+    "fridge_refr_var_room_sens_failure": "Цоол Фресх сензор фиоке",
     "td_paused_tips": "Sušenje u kk je na pauzi.",
     "drying_is_stopping": "Sušenje se zaustavlja.",
     "drying_stoppint_tips": "Sušenje u kk je u fazi zaustavljanja. Drugi program se može poslati u mašinu za sušenje veša kada je trenutni program zaustavljen.",
-    "tuya_device_bind_failed": "",
-    "tuya_device_bind_more_than_8": "",
-    "found_x_inverter": "",
-    "confirm_to_add_device": "",
-    "please_select_city_information": "",
-    "clean_grease_filter": "",
-    "clean_recirculation_filter_1": "",
-    "clean_recirculation_filter_2": "",
+    "tuya_device_bind_failed": "Уређај(и) се не могу упарити са апликацијом. Покушајте поново или поново покрените апликацију.",
+    "tuya_device_bind_more_than_8": "Један КР код може додати највише 8 уређаја.",
+    "found_x_inverter": "Пронађен *** Инвертер(и).",
+    "confirm_to_add_device": "Потврдите да додате уређаје на свој налог.",
+    "please_select_city_information": "Молимо изаберите информације о граду.",
+    "clean_grease_filter": "Очистите филтер за масноћу",
+    "clean_recirculation_filter_1": "Очистите рециркулацијски филтер 1",
+    "clean_recirculation_filter_2": "Очистите рециркулацијски филтер 2",
     "stop_at": "Заустави на",
     "same_time_tip": "Vreme početka i vremena završetka ne mogu biti isti",
     "blue_power_off_content": "ConnectLife želi da uključi Bluetooth za ovaj uređaj kako biste mogli da pristupite svim funkcijama koje nudi.",
     "blue_permission_off_content": "ConnectLife koristi Bluetooth za pronalaženje, povezivanje i određivanje položaja obližnjih uređaja. Uvek možete promeniti podešavanja u sistemskim podešavanjima svog telefona.",
     "blue_power_off_title": "Укључите Блуетоотх",
     "blue_permission_off_title": "ConnectLife nema dozvolu da koristi Bluetooth",
-    "allow_bluetooth": "",
+    "allow_bluetooth": "ДОЗВОЛИ БЛУЕТООТХ",
     "blue_permission_off_pop_title": "ConnectLife koristi Bluetooth za pronalaženje, povezivanje i određivanje položaja obližnjih uređaja. Uvek možete promeniti podešavanja u sistemskim podešavanjima svog telefona.",
-    "blue_ios_setting": "",
+    "blue_ios_setting": "ОТВОРИ ПОДЕШАВАЊА ТЕЛЕФОНА",
     "blue_cancel": "NASTAVI BEZ BLUETOOTH-a",
     "blue_power_off_pop_title": "ConnectLife želi da UKLJUČI Bluetooth za ovaj uređaj",
-    "recommended": "",
+    "recommended": "Препоручено",
     "alexa_auth_title": "Želite da naručite ConnectLife sa Aleksa?",
     "alexa_auth_desc": "Kliknite na <b>Dozvoli</b> da povežete svoj ConnectLife nalog sa Aleksa.",
     "not_find_device": "Не можете да пронађете уређај?",
@@ -3560,25 +3560,25 @@
     "room_assignment": "Додела Собе",
     "system_add": "Системска Адреса",
     "blue_enable": "OMOGUĆI BLUETOOTH",
-    "program_sent_to_oven": "",
-    "continue_on_the_device": "",
-    "start_the_program_and_insert_dish": "",
-    "browse_more_recipes": "",
+    "program_sent_to_oven": "Програм послат у рерну!",
+    "continue_on_the_device": "Наставите на уређају.",
+    "start_the_program_and_insert_dish": "Покрените програм и уметните посуду након претходног загревања.",
+    "browse_more_recipes": "Прегледајте још рецепата",
     "no_scheduling_set": "Nema podešenih rasporeda",
     "add_new": "Dodaj novi",
-    "chef_recipe": "",
-    "recipe_assistant": "",
+    "chef_recipe": "Цхеф Реципе",
+    "recipe_assistant": "Реципе Ассистант",
     "shopping_list": "Šoping lista",
     "scanned_code_not_recognized": "Skenirani kod nije prepoznat",
     "scan_correct_device_code": "Skenirajte ispravan kod uređaja",
-    "best_for": "",
-    "cooking_steps": "",
-    "add_in_shopping_list": "",
+    "best_for": "Најбоље за ##",
+    "cooking_steps": "Кораци кувања",
+    "add_in_shopping_list": "ДОДАЈТЕ НА ЛИСТУ ЗА КУПОВИНУ",
     "blue_power_off_content_add_device": "ConnectLife koristi Bluetooth za pronalaženje, povezivanje i određivanje položaja obližnjih uređaja.",
     "blue_power_off_title_add_device": "Uključite Bluetooth za ovaj uređaj",
     "blue_permission_off_title_add_device": "Bluetooth je onemogućen za ConnectLife",
-    "time_care_desc": "",
-    "refr_exit_super_cool_tips": "",
+    "time_care_desc": "Када је ова функција активирана, програм прања ће се изводити са краћим трајањем прања.",
+    "refr_exit_super_cool_tips": "Сада укључите режим Супер замрзивач и изађите из режима Супер Цоол",
     "refr_exit_super_freeze_tips": "Сада укључите режим супер хлађења и изађите из режима супер смрзавања",
     "enter_recipe_name": "Унесите назив рецепта...",
     "results": "резултати",
@@ -3675,9 +3675,9 @@
     "asko_oven_distant_user_detected": "ДЕТЕКТОВАН УДАЉЕНИ КОРИСНИК",
     "asko_oven_display_change_to": "Приказ се мења на",
     "asko_oven_light_change_to": "Светла се мењају у",
-    "asko_oven_door_sensor_wake_up": "",
+    "asko_oven_door_sensor_wake_up": "Пробуђење сензора врата",
     "asko_oven_door_sensor_wake_up_content": "Пећница се може пробудити ако сензор близине детектује ваше присуство и приликом отварања врата. Имајте на уму да ће ово повећати потрошњу енергије.",
-    "asko_oven_brand_splash": "",
+    "asko_oven_brand_splash": "Бранд спласх",
     "asko_oven_brand_splash_content": "Прикажите видео снимак бренда током покретања и искључивања.",
     "jchoem_privacy_desc": "Молимо вас да имате у виду да компанија Johnson Controls не управља нити контролише ову апликацију. Ваши подаци ће бити обрађивани у складу са Политиком приватности треће стране, која ће бити приказана на следећем екрану.",
     "asko_oven_inactivity_time_out": "ВРЕМЕ НЕАКТИВНОСТИ",
