--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "גריל גדול + מאוורר + מיקרוגל",
     "CL_DV_OV_baking_stopped": "האפייה ב-## הופסקה.",
     "CL_DV_OV_check_to_confirm": "בדוק את התנור כדי לאשר.",
-    "CL_CF_CO_buy": "לִקְנוֹת"
+    "CL_CF_CO_buy": "לִקְנוֹת",
+    "CL_CF_CS_window_ac_step_2": "לחץ והחזק את כפתור \"התחבר\" למשך כ-6 שניות, או כוון את השלט הרחוק אל המקלט ולחץ על כפתור \"הנדנדה\" 6 פעמים, עד שהתצוגה תראה \"77\" או שנורית ה-WiFi תתחיל להבהב."
 }
