--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "شواية كبيرة + مروحة + ميكروويف",
     "CL_DV_OV_baking_stopped": "تم إيقاف الخبز في ##.",
     "CL_DV_OV_check_to_confirm": "افحص الفرن للتأكيد.",
-    "CL_CF_CO_buy": "يشتري"
+    "CL_CF_CO_buy": "يشتري",
+    "CL_CF_CS_window_ac_step_2": "اضغط مع الاستمرار على زر \"الاتصال\" لمدة 6 ثوانٍ تقريبًا، أو وجه جهاز التحكم عن بعد نحو جهاز الاستقبال واضغط على زر \"التأرجح\" 6 مرات، حتى تُظهر الشاشة \"77\" أو يبدأ ضوء WiFi في الوميض."
 }
