--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "Großer Grill + Ventilator + Mikrowelle",
     "CL_DV_OV_baking_stopped": "Das Backen in ## wurde gestoppt.",
     "CL_DV_OV_check_to_confirm": "Überprüfen Sie zur Bestätigung den Ofen.",
-    "CL_CF_CO_buy": "Kaufen"
+    "CL_CF_CO_buy": "Kaufen",
+    "CL_CF_CS_window_ac_step_2": "Halten Sie die Taste „Verbinden“ etwa 6 Sekunden lang gedrückt oder richten Sie die Fernbedienung auf den Empfänger und drücken Sie die Taste „Schwingen“ 6 Mal, bis auf dem Display „77“ angezeigt wird oder die WLAN-Leuchte zu blinken beginnt."
 }
