--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "Μεγάλο γκριλ + Ανεμιστήρας + Μικροκύματα",
     "CL_DV_OV_baking_stopped": "Το ψήσιμο στο ## διακόπηκε.",
     "CL_DV_OV_check_to_confirm": "Ελέγξτε τον φούρνο για επιβεβαίωση.",
-    "CL_CF_CO_buy": "Αγορά"
+    "CL_CF_CO_buy": "Αγορά",
+    "CL_CF_CS_window_ac_step_2": "Πατήστε και κρατήστε πατημένο το κουμπί \"σύνδεση\" για περίπου 6 δευτερόλεπτα ή στοχεύστε το τηλεχειριστήριο προς τον δέκτη και πατήστε το κουμπί \"αιώρησης\" 6 φορές, έως ότου η οθόνη εμφανίσει \"77\" ή η λυχνία WiFi αρχίσει να αναβοσβήνει."
 }
