--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "Grill grande +  ventilador + microondas",
     "CL_DV_OV_baking_stopped": "Se detuvo el horneado en ##.",
     "CL_DV_OV_check_to_confirm": "Revisa el horno para confirmar.",
-    "CL_CF_CO_buy": "Comprar"
+    "CL_CF_CO_buy": "Comprar",
+    "CL_CF_CS_window_ac_step_2": "Mantenga presionado el botón “conectar” durante aproximadamente 6 segundos, o apunte el control remoto al receptor y presione el botón “oscilación” 6 veces, hasta que la pantalla muestre “77” o la luz WiFi comience a parpadear."
 }
