--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "گریل بزرگ + پنکه + مایکروفر",
     "CL_DV_OV_baking_stopped": "پخت در ## متوقف شد.",
     "CL_DV_OV_check_to_confirm": "برای تایید فر را چک کنید.",
-    "CL_CF_CO_buy": "خرید کنید"
+    "CL_CF_CO_buy": "خرید کنید",
+    "CL_CF_CS_window_ac_step_2": "دکمه \"connect\" را برای تقریباً 6 ثانیه فشار دهید و نگه دارید، یا کنترل از راه دور را به سمت گیرنده بگیرید و دکمه \"swing\" را 6 بار فشار دهید تا زمانی که صفحه نمایش \"77\" را نشان دهد یا چراغ WiFi شروع به چشمک زدن کند."
 }
