--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "Grand gril +  Ventilateur + Micro-ondes",
     "CL_DV_OV_baking_stopped": "La cuisson en ## a été arrêtée.",
     "CL_DV_OV_check_to_confirm": "Vérifiez le four pour confirmer.",
-    "CL_CF_CO_buy": "Acheter"
+    "CL_CF_CO_buy": "Acheter",
+    "CL_CF_CS_window_ac_step_2": "Appuyez sur le bouton « Connect » et maintenez-le enfoncé pendant environ 6 secondes, ou dirigez la télécommande vers le récepteur et appuyez 6 fois sur le bouton « Swing », jusqu'à ce que l'écran affiche « 77 » ou que le voyant WiFi commence à clignoter."
 }
