--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "बड़ी ग्रिल + पंखा + माइक्रोवेव",
     "CL_DV_OV_baking_stopped": "## में बेकिंग रोक दी गई।",
     "CL_DV_OV_check_to_confirm": "पुष्टि के लिए ओवन की जाँच करें।",
-    "CL_CF_CO_buy": "खरीदना"
+    "CL_CF_CO_buy": "खरीदना",
+    "CL_CF_CS_window_ac_step_2": "\"कनेक्ट\" बटन को लगभग 6 सेकंड तक दबाकर रखें, या रिमोट कंट्रोलर को रिसीवर पर रखें और \"स्विंग\" बटन को 6 बार दबाएं, जब तक कि डिस्प्ले पर \"77\" न दिखाई दे या वाईफाई लाइट चमकने न लगे।"
 }
