--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -3261,25 +3261,25 @@
     "program_mode_default_desc": "Ovaj je način rada zadan i neće unijeti nikakve promjene u odabrani program.",
     "program_mode_disinfection_desc": "Način sušenja s visokom temperaturom, ekstra suho. Ubija do 99,99% bakterija.",
     "program_mode_delicate_desc": "Nježno miješanje kako bi se spriječilo nepotrebno habanje i habanje odjeće.",
-    "bundling_detection_desc": "Ova funkcija pomaže osigurati ravnomjerno sušenje odjeće i sprječava potrebu za ručnom intervencijom za odvajanje odjeće. Prema zadanim postavkama uvijek je omogućeno, ali se ovdje može onemogućiti.",
+    "bundling_detection_desc": "Ova funkcija pomaže osigurati ravnomjerno sušenje odjeće i sprječava potrebu za ručnom intervencijom odvajanja odjeće. Prema zadanim postavkama uvijek je omogućeno, ali se ovdje može onemogućiti.",
     "turn_on_bundling_detection": "Omogući/onemogući otkrivanje grupiranja",
     "wine_key": "Ključ",
     "wine_modes": "Načini rada",
     "all_floors_key": "Svi katovi",
     "no_devices_key": "Nema uređaja",
     "professional_laundry_key": "Profesionalna praonica",
-    "delete_floor_tip_key": "Brisanje ovog kata će izbrisati sve sobe u njemu. Uređaji povezani s ovim katom bit će premješteni u kategoriju \"Nenaznačeno\" na stranici uređaja.",
-    "move_to_selected_room_key": "premjesti se u odabranu sobu",
+    "delete_floor_tip_key": "Brisanjem ovog kata izbrisat će se sve prostorije u njemu. Uređaji povezani s ovim katom bit će premješteni u kategoriju \"Nedodijeljeno\" na stranici uređaja.",
+    "move_to_selected_room_key": "premjesti u odabranu sobu",
     "this_room_already_exists": "Ova soba već postoji",
     "floor_name_key": "Ime kata",
-    "enter_floor_name_key": "Unesite naziv poda",
+    "enter_floor_name_key": "Unesite naziv kata",
     "this_floor_already_exists": "Ovaj kat već postoji",
     "existing_key": "postojeći ##",
     "setting_address_email": "e-pošta",
-    "floor_key": "Kat",
+    "floor_key": "kat",
     "no_notifications": "Nema obavijesti",
     "delete_routine": "IZBRIŠI RUTINU",
-    "add_scenes_and_create_routines_with_your_devices": "Pomoću svojih uređaja dodajte scene i kreirajte rutine",
+    "add_scenes_and_create_routines_with_your_devices": "Dodajte scene i kreirajte rutine sa svojim uređajima",
     "add_routines": "DODAJ RUTINE",
     "recommended_routines": "PREPORUČENE RUTINE",
     "manual_routines": "RUČNE RUTINE",
@@ -3347,7 +3347,7 @@
     "after_sale_report_failed_desc": "Došlo je do neočekivane pogreške. Pokušajte ponovo ili se obratite postprodajnoj službi.",
     "country_and_region": "Država/regija",
     "rf_ai": "AI",
-    "exit_ai_mode_toast": "Ručno podešavanje temperature  Izađite iz ECO načina rada",
+    "exit_ai_mode_toast": "Ručno podešavanje temperature Izađite iz AI moda",
     "rf_fuzzy_desc": "Temperatura hladnjaka automatski se prebacuje na 5°C, a zamrzivača na -18°C，to je pametan način rada za održavanje hrane u najboljem stanju.",
     "after_sale_unsupported_ts_tips": "Žao nam je, ali informacije o rješavanju problema za ovaj uređaj trenutno nisu dostupne. Naš tim radi na tome da uskoro pruži podršku za ovaj uređaj.",
     "after_sale_unsupported_ri_tips": "Žao nam je, ali prijava problema za ovaj uređaj trenutno nije dostupna. Naš tim radi na tome da uskoro pruži podršku za ovaj uređaj.",
@@ -3355,7 +3355,7 @@
     "no_spin": "Bez centrifuge",
     "wm_program_mode_normal_desc": "Ovaj je način rada zadan i neće unijeti nikakve promjene u odabrani program.",
     "wm_program_mode_green_desc": "Pranje koje štedi energiju; duže vrijeme pranja, manja potrošnja vode.",
-    "wm_program_mode_speed_desc": "Pranje koje štedi vrijeme; kraće vrijeme pranja, veća potrošnja vode i energije). Napomena: U programu Pamuk preporučujemo pola punjenja.",
+    "wm_program_mode_speed_desc": "Pranje koje štedi vrijeme; kraće vrijeme pranja, veća potrošnja vode i energije). Napomena: U programu Pamuk preporučujemo polovicu količine odjeće.",
     "wm_program_mode_night_desc": "Pranje koje smanjuje buku i produljuje vrijeme pranja.",
     "wm_program_mode_intensive_desc": "Pranje koje poboljšava učinak čišćenja, s dodatnom količinom vode i produljenim vremenom pranja.",
     "default": "Zadano",
@@ -3379,7 +3379,7 @@
     "select_logic_relation_ship": "Odaberite logički odnos",
     "no_scene_key": "nema scene",
     "add_new_scene_key": "dodaj novu scenu",
-    "wm_stain_program_type_temp": "VRSTA MRLJA, TKANINA I TEM",
+    "wm_stain_program_type_temp": "VRSTA MRLJA, TKANINA I TEMPERATURA",
     "wm_stain_program_desc": "U nastavku odaberite vrstu mrlja i tkaninu/temperaturu. Perilica će na temelju toga automatski odabrati optimalni program.",
     "stain_type": "Vrsta mrlja",
     "fabric_temperature": "Tkanina i temperatura",
@@ -3393,8 +3393,8 @@
     "wifi": "Wi-Fi",
     "wired": "Ožičeno",
     "appliance_been_found": "Pronađen je uređaj, odaberite uređaj za dodavanje.",
-    "wifi_id": "WiFi ID:",
-    "dw_remote_control_content": "Molimo pritisnite gumb \"Daljinski\" na upravljačkoj ploči uređaja kako biste omogućili.",
+    "wifi_id": "Wi-Fi ID:",
+    "dw_remote_control_content": "Molimo pritisnite gumb \"Remote\" na upravljačkoj ploči uređaja kako biste omogućili.",
     "dw_offline_title": "Vaš uređaj je izvan mreže. Provjerite:",
     "dw_offline_content1": "Vaš uređaj je priključen i uključen.",
     "dw_offline_content2": "Vaš Wi-Fi je omogućen i povezan.",
@@ -3465,16 +3465,16 @@
     "unit_will_start": "Jedinica će početi od",
     "unit_will_stop": "Jedinica će se zaustaviti na",
     "start_successfully": "Uspješno pokretanje",
-    "quick_timer_1": "Quick-Timer 1",
-    "quick_timer": "Brzi mjerač vremena",
-    "scheduler": "Određivač",
+    "quick_timer_1": "Brzi timer 1",
+    "quick_timer": "Brzi timer",
+    "scheduler": "Planer",
     "scheduling_settings": "Postavke rasporeda",
     "device_connect_network_tips": "Molimo vas da osigurate da je uređaj povezan na mrežu. Održavajte normalan signal rutera od 2.4Hz.",
-    "please_enter_wifiid": "Molimo unesite Wifi identifikator.",
+    "please_enter_wifiid": "Molimo unesite Wi-Fi identifikator.",
     "wifiid_verify_code_hint": "6-znamenkasti verifikacijski kod",
-    "wifiid_1": "Wifi Identifikator",
-    "verify": "Provjeriti",
-    "important_reminder": "Važna napomena",
+    "wifiid_1": "Wi-Fi identifikator",
+    "verify": "Ovjeriti",
+    "important_reminder": "Važan podsjetnik",
     "device_has_been_bind_by_another": "Uređaj je uparen s drugim računom. Nastavak povezivanja izbrisat će podatke o povezivanju i ponovno ih konfigurirati.",
     "device_has_been_bind_in_himit": "Ovaj uređaj je uparen od strane \"*****\". Pripada računu Hi-Mit II. Ako želite nastaviti, prvo ga odspojite u aplikaciji Hi-Mit II.",
     "water_inlet_value": "Ulazna vrijednost vode",
@@ -3560,7 +3560,7 @@
     "room_assignment": "Dodjela sobe",
     "system_add": "Sustavna Adresa",
     "blue_enable": "OMOGUĆITE BLUETOOTH",
-    "program_sent_to_oven": "Program poslan u pećnicu!",
+    "program_sent_to_oven": "Program poslan na pećnicu!",
     "continue_on_the_device": "Nastavite na uređaju.",
     "start_the_program_and_insert_dish": "Pokrenite program i stavite jelo nakon prethodnog zagrijavanja.",
     "browse_more_recipes": "Pregledajte više recepata",
@@ -3577,11 +3577,11 @@
     "blue_power_off_content_add_device": "ConnectLife koristi Bluetooth za pronalaženje, povezivanje i određivanje položaja uređaja u blizini.",
     "blue_power_off_title_add_device": "Uključite Bluetooth za ovaj uređaj",
     "blue_permission_off_title_add_device": "Bluetooth je onemogućen za ConnectLife",
-    "time_care_desc": "Kada je ova funkcija aktivirana, program pranja će se provesti s kraćim trajanjem pranja.",
-    "refr_exit_super_cool_tips": "Sada uključite način rada Super Freezer i izađite iz načina rada Super Cool",
-    "refr_exit_super_freeze_tips": "Sada uključite način rada Super Cool i izađite iz načina rada Super Freeze",
+    "time_care_desc": "Kada je ova funkcija aktivirana, program pranja će se provesti s kraćim trajanjem.",
+    "refr_exit_super_cool_tips": "Sada uključite Super Freeze način rada i izađite iz Super Cool načina rada",
+    "refr_exit_super_freeze_tips": "Sada uključite Super Cool način rada i izađite iz Super Freeze načina rada",
     "enter_recipe_name": "Unesite naziv recepta...",
-    "results": "rezultate",
+    "results": "rezultati",
     "no_favourite_recipes": "Nema omiljenih recepata",
     "no_favourite_recipes_desc": "Kliknite na simbol ## na receptu da dodate omiljeni recept.",
     "management": "upravljanje",
@@ -3603,7 +3603,7 @@
     "hide": "Sakriti",
     "see_all": "Vidi sve",
     "recipe_allergens_mustand_seeds": "Sjemenke gorušice",
-    "recipe_difficulties_challenging": "Izazovan",
+    "recipe_difficulties_challenging": "Izazovno",
     "recipe_difficulties_beginner": "Lako",
     "recipe_type_breakfast": "Doručak",
     "recipe_type_desserts": "Deserti",
@@ -3613,7 +3613,7 @@
     "recipe_main_ingredients_vegetables": "Povrće",
     "recipe_main_ingredients_savoury_pastries": "Slana peciva",
     "recipe_main_ingredients_grains": "Žitarice",
-    "recipe_main_ingredients_potatoes": "krumpir",
+    "recipe_main_ingredients_potatoes": "Krumpir",
     "recipe_main_ingredients_bread": "Kruh",
     "recipe_main_ingredients_meat": "MESO",
     "recipe_main_ingredients_fish_seafood": "Riba i plodovi mora",
@@ -3623,14 +3623,14 @@
     "recipe_main_ingredients_game": "Igra",
     "recipe_nutrition_high_fiber": "Visoka količina vlakana",
     "recipe_nutrition_low_sugars": "Niski šećeri",
-    "recipe_nutrition_low_fat": "niske masnoće",
+    "recipe_nutrition_low_fat": "Niske masnoće",
     "recipe_nutrition_low_sodium": "Niska razina natrija",
-    "recipe_nutrition_high_protein": "Visoka količina proteina",
-    "recipe_nutrition_low_carb": "Nisko ugljikohidrati",
+    "recipe_nutrition_high_protein": "Visok udio proteina",
+    "recipe_nutrition_low_carb": "Niska razina ugljikohidrata",
     "recipe_nutrition_sugar_free": "Bez šećera",
     "recipe_under_##_mins": "Ispod ## min",
     "recipe_more_than_##_mins": "Više od ## min",
-    "recipe_assistant_more_options": "Precizirajte zahtjeve za točnije preporuke. (nije obavezno)",
+    "recipe_assistant_more_options": "Precizirajte zahtjeve za točnije preporuke (nije obavezno).",
     "our_recommendation": "Naša preporuka",
     "no_search_results": "Nema rezultata pretraživanja",
     "let_us_try_another_word": "Pokušajmo s drugom riječju.",
@@ -3640,12 +3640,12 @@
     "asko_oven_set_time_date": "Odaberite datum, vrijeme i format vremena za svoju pećnicu.",
     "asko_oven_set_language": "Odaberite jezik za svoju pećnicu.",
     "asko_oven_set_settings": "Postavite vrijeme i jezik za svoju pećnicu.",
-    "asko_oven_time_date_automatic": "Vrijeme - automatski datum",
+    "asko_oven_time_date_automatic": "Automatsko vrijeme i datum",
     "select_at_least_one_oven": "Odaberite barem jednu pećnicu za slanje.",
     "the_limit_has_been_reached": "Ne može se mijenjati, ograničenje je dosegnuto.",
-    "let_us_try_other_options": "Pokušajmo s nekim drugim opcijama.",
+    "let_us_try_other_options": "Pokušajte s nekim drugim opcijama.",
     "found_##_search_results": "Pronašli smo ## rezultata pretraživanja za vas.",
-    "wm_program_mode_time_care_1_desc": "Kada je ova funkcija aktivirana, program pranja će se provesti s kraćim trajanjem pranja.",
+    "wm_program_mode_time_care_1_desc": "Kada je ova funkcija aktivirana, program pranja će se provesti s kraćim trajanjem.",
     "asko_oven_adaptive_brightness": "Prilagodljiva svjetlina",
     "online_tip": "online",
     "atw_tip": "ATW",
@@ -3662,22 +3662,22 @@
     "asko_oven_show_bg_content": "Prikaži pozadinu na zaslonu pećnice ili ne.",
     "asko_oven_light_setting_content": "Postavite temperaturu boje, svjetlinu i vrijeme svjetla prema svojim željama.",
     "asko_oven_stage_light_content": "Osvjetljenje ispod upravljačke ploče pećnice za osvjetljavanje vašeg jela dok ga izvadite iz pećnice.",
-    "asko_oven_stage_light": "Svjetlo pozornice",
+    "asko_oven_stage_light": "Ambijentalno svjetlo",
     "asko_oven_color_temperature": "TEMPERATURA BOJE",
     "asko_oven_color_temperature_content": "Postavite temperaturu boje rasvjetnih tijela.",
-    "asko_oven_brightness_light_content": "Postavite svjetlinu rasvjete šupljine.",
+    "asko_oven_brightness_light_content": "Postavite jačinu rasvjete unutrašnjosti.",
     "asko_oven_time_out_content": "Postavite koliko dugo svjetla u unutrašnjosti trebaju ostati uključena nakon aktivacije.",
     "asko_oven_control_settings": "Postavke kontrole",
     "asko_oven_control_setting_content": "Postavite svjetlinu zaslona vašeg uređaja, promijenite temu, veličinu fonta i postavite kada zaslon vašeg uređaja prelazi u stanje pripravnosti.",
-    "asko_oven_camera_content": "Korištenjem kamere vaše se jelo može pratiti bez otvaranja vrata.",
+    "asko_oven_camera_content": "Korištenjem kamere možete pratiti jelo bez otvaranja vrata.",
     "asko_oven_proximity_sensor": "Senzor blizine",
     "asko_oven_proximity_sensor_content": "Kada se otkrije kretanje u blizini pećnice, svjetlo i zaslon ponašaju se u skladu s vašim postavkama u nastavku.",
     "asko_oven_distant_user_detected": "DETEKTIRAN UDALJENI KORISNIK",
     "asko_oven_display_change_to": "Promjene prikaza na",
     "asko_oven_light_change_to": "Svjetla se mijenjaju u",
-    "asko_oven_door_sensor_wake_up": "Probudi se senzor vrata",
+    "asko_oven_door_sensor_wake_up": "Aktivira se senzor vrata",
     "asko_oven_door_sensor_wake_up_content": "Pećnica se može probuditi ako senzor blizine detektira vašu prisutnost kao i na otvaranje vrata. Imajte na umu da će to povećati potrošnju energije.",
-    "asko_oven_brand_splash": "Prskanje marke",
+    "asko_oven_brand_splash": "Brand logo",
     "asko_oven_brand_splash_content": "Prikažite videozapis s natpisom marke tijekom pokretanja i gašenja.",
     "jchoem_privacy_desc": "Imajte na umu da Johnson Controls ne upravlja niti kontrolira ovu aplikaciju. Vaši će se podaci obrađivati u skladu s Politikom privatnosti treće strane, koja se nalazi na sljedećem zaslonu.",
     "asko_oven_inactivity_time_out": "TIME-OUT NEAKTIVNOSTI",
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "Veliki žar + ventilator + mikrovalovi",
     "CL_DV_OV_baking_stopped": "Pečenje u ## je zaustavljeno.",
     "CL_DV_OV_check_to_confirm": "Provjerite pećnicu za potvrdu.",
-    "CL_CF_CO_buy": "Kupiti"
+    "CL_CF_CO_buy": "Kupiti",
+    "CL_CF_CS_window_ac_step_2": "Pritisnite i držite tipku \"connect\" otprilike 6 sekundi ili usmjerite daljinski upravljač prema prijemniku i pritisnite tipku \"swing\" 6 puta, dok se na zaslonu ne prikaže \"77\" ili dok WiFi svjetlo ne počne treperiti."
 }
