--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "Nagy grill + légkeverés + mikrohullám",
     "CL_DV_OV_baking_stopped": "A ##-ban leállított sütés.",
     "CL_DV_OV_check_to_confirm": "Ellenőrizze a sütőt a megerősítéshez.",
-    "CL_CF_CO_buy": "Vétel"
+    "CL_CF_CO_buy": "Vétel",
+    "CL_CF_CS_window_ac_step_2": "Nyomja meg és tartsa lenyomva a „csatlakozás” gombot kb. 6 másodpercig, vagy irányítsa a távirányítót a vevőre, és nyomja meg a „swing” gombot 6-szor, amíg a kijelzőn a „77” meg nem jelenik, vagy a WiFi jelzőfény el nem kezd villogni."
 }
