--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "Griglia grande + Ventola + Microonde",
     "CL_DV_OV_baking_stopped": "La cottura in ## è stata interrotta.",
     "CL_DV_OV_check_to_confirm": "Controlla il forno per conferma.",
-    "CL_CF_CO_buy": "Acquistare"
+    "CL_CF_CO_buy": "Acquistare",
+    "CL_CF_CS_window_ac_step_2": "Premere e tenere premuto il pulsante \"Connect\" per circa 6 secondi oppure puntare il telecomando verso il ricevitore e premere il pulsante \"Swing\" 6 volte, finché il display non mostra \"77\" o la spia WiFi non inizia a lampeggiare."
 }
