--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "大型グリル + 扇風機 + 電子レンジ",
     "CL_DV_OV_baking_stopped": "## でのベイク処理が停止されました。",
     "CL_DV_OV_check_to_confirm": "オーブンをチェックして確認してください。",
-    "CL_CF_CO_buy": "買う"
+    "CL_CF_CO_buy": "買う",
+    "CL_CF_CS_window_ac_step_2": "「接続」ボタンを約 6 秒間押し続けるか、リモコンを受信機に向けて「スイング」ボタンを 6 回押し、ディスプレイに「77」が表示されるか WiFi ライトが点滅し始めるまで押し続けます。"
 }
