--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "Үлкен гриль + желдеткіш + СВЧ (Қысқа толқынды пеш)",
     "CL_DV_OV_baking_stopped": "## ішінде пісіру тоқтатылды.",
     "CL_DV_OV_check_to_confirm": "Растау үшін пешті тексеріңіз.",
-    "CL_CF_CO_buy": "Сатып алу"
+    "CL_CF_CO_buy": "Сатып алу",
+    "CL_CF_CS_window_ac_step_2": "«Қосылу» түймесін шамамен 6 секунд басып тұрыңыз немесе қашықтан басқару құралын ресиверге бағыттаңыз және дисплейде «77» көрсетілгенше немесе WiFi шамы жыпылықтай бастағанша «айналу» түймесін 6 рет басыңыз."
 }
