--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "대형 그릴 + 선풍기 + 전자레인지",
     "CL_DV_OV_baking_stopped": "##에서 베이킹이 중지되었습니다.",
     "CL_DV_OV_check_to_confirm": "오븐을 확인하여 확인하세요.",
-    "CL_CF_CO_buy": "구입하다"
+    "CL_CF_CO_buy": "구입하다",
+    "CL_CF_CS_window_ac_step_2": "\"연결\" 버튼을 약 6초간 길게 누르거나, 리모컨을 수신기에 대고 \"스윙\" 버튼을 6번 눌러 디스플레이에 \"77\"이 표시되거나 WiFi 표시등이 깜박일 때까지 누릅니다."
 }
