--- a/language/i18n_ku_TR.json
+++ b/language/i18n_ku_TR.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "",
     "CL_DV_OV_baking_stopped": "",
     "CL_DV_OV_check_to_confirm": "",
-    "CL_CF_CO_buy": "Kirrîn"
+    "CL_CF_CO_buy": "Kirrîn",
+    "CL_CF_CS_window_ac_step_2": ""
 }
