--- a/language/i18n_mk_MK.json
+++ b/language/i18n_mk_MK.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "Голема скара + Вентилатор + Микробранова печка",
     "CL_DV_OV_baking_stopped": "Печењето во ## беше прекинато.",
     "CL_DV_OV_check_to_confirm": "Проверете ја рерната за да потврдите.",
-    "CL_CF_CO_buy": "Купи"
+    "CL_CF_CO_buy": "Купи",
+    "CL_CF_CS_window_ac_step_2": "Притиснете и задржете го копчето „поврзи“ околу 6 секунди или насочете го далечинскиот управувач кон ресиверот и притиснете го копчето „swing“ 6 пати, додека на екранот не покаже „77“ или светлото за WiFi не почне да трепка."
 }
