--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "Gril besar + Kipas + Ketuhar gelombang mikro",
     "CL_DV_OV_baking_stopped": "Pembakaran dalam ## telah dihentikan.",
     "CL_DV_OV_check_to_confirm": "Periksa ketuhar untuk mengesahkan.",
-    "CL_CF_CO_buy": "Beli"
+    "CL_CF_CO_buy": "Beli",
+    "CL_CF_CS_window_ac_step_2": "Tekan dan tahan butang \"sambung\" selama lebih kurang 6 saat, atau halakan alat kawalan jauh ke arah penerima dan tekan butang \"hayun\" 6 kali, sehingga paparan menunjukkan \"77\" atau lampu WiFi mula berkelip."
 }
