--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "Stor grill + vifte + mikrobølgeovn",
     "CL_DV_OV_baking_stopped": "Baking i ## ble stoppet.",
     "CL_DV_OV_check_to_confirm": "Sjekk ovnen for å bekrefte.",
-    "CL_CF_CO_buy": "Kjøpe"
+    "CL_CF_CO_buy": "Kjøpe",
+    "CL_CF_CS_window_ac_step_2": "Trykk og hold \"connect\"-knappen i ca. 6 sekunder, eller rett fjernkontrollen mot mottakeren og trykk på \"swing\"-knappen 6 ganger, til displayet viser \"77\" eller WiFi-lyset begynner å blinke."
 }
