--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "Grote grill + Magnetron",
     "CL_DV_OV_baking_stopped": "Het bakken in ## is gestopt.",
     "CL_DV_OV_check_to_confirm": "Controleer de oven om dit te bevestigen.",
-    "CL_CF_CO_buy": "Kopen"
+    "CL_CF_CO_buy": "Kopen",
+    "CL_CF_CS_window_ac_step_2": "Houd de knop “connect” ongeveer 6 seconden ingedrukt, of richt de afstandsbediening op de ontvanger en druk 6 keer op de knop “swing”, totdat op het display “77” verschijnt of het wifi-lampje begint te knipperen."
 }
