--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "Grelha grande + Ventilador + Micro-ondas",
     "CL_DV_OV_baking_stopped": "O cozimento em ## foi interrompido.",
     "CL_DV_OV_check_to_confirm": "Verifique o forno para confirmar.",
-    "CL_CF_CO_buy": "Comprar"
+    "CL_CF_CO_buy": "Comprar",
+    "CL_CF_CS_window_ac_step_2": "Pressione e segure o botão “conectar” por aproximadamente 6 segundos, ou aponte o controle remoto para o receptor e pressione o botão “oscilar” 6 vezes, até que o visor mostre “77” ou a luz WiFi comece a piscar."
 }
