--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "Grătar mare + ventilator + microunde",
     "CL_DV_OV_baking_stopped": "Coacerea în ## a fost oprită.",
     "CL_DV_OV_check_to_confirm": "Verificați cuptorul pentru a confirma.",
-    "CL_CF_CO_buy": "Cumpăra"
+    "CL_CF_CO_buy": "Cumpăra",
+    "CL_CF_CS_window_ac_step_2": "Apăsați și mențineți apăsat butonul „conectare” timp de aproximativ 6 secunde sau îndreptați telecomanda spre receptor și apăsați butonul „swing” de 6 ori, până când afișajul arată „77” sau lumina WiFi începe să clipească."
 }
