--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "Большой гриль + вентилятор + микроволны",
     "CL_DV_OV_baking_stopped": "Выпечка в ## была остановлена.",
     "CL_DV_OV_check_to_confirm": "Проверьте духовку, чтобы убедиться.",
-    "CL_CF_CO_buy": "Купить"
+    "CL_CF_CO_buy": "Купить",
+    "CL_CF_CS_window_ac_step_2": "Нажмите и удерживайте кнопку «подключиться» в течение примерно 6 секунд или направьте пульт дистанционного управления на приемник и нажмите кнопку «покачивание» 6 раз, пока на дисплее не отобразится «77» или индикатор WiFi не начнет мигать."
 }
