--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "Veliki žar + Ventilator + Mikrovalovi",
     "CL_DV_OV_baking_stopped": "Peka v ## je bila ustavljena.",
     "CL_DV_OV_check_to_confirm": "Za potrditev preverite pečico.",
-    "CL_CF_CO_buy": "Nakup"
+    "CL_CF_CO_buy": "Nakup",
+    "CL_CF_CS_window_ac_step_2": "Pritisnite in držite gumb »poveži« za približno 6 sekund ali usmerite daljinski upravljalnik proti sprejemniku in 6-krat pritisnite gumb »swing«, dokler se na zaslonu ne prikaže »77« ali lučka WiFi ne začne utripati."
 }
