--- a/language/i18n_sr_BA.json
+++ b/language/i18n_sr_BA.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "Велики роштиљ + Вентилатор + Микроталасна рерна",
     "CL_DV_OV_baking_stopped": "Печење у ## је заустављено.",
     "CL_DV_OV_check_to_confirm": "Проверите рерну да бисте потврдили.",
-    "CL_CF_CO_buy": "Купи"
+    "CL_CF_CO_buy": "Купи",
+    "CL_CF_CS_window_ac_step_2": "Притисните и држите дугме „повежи“ отприлике 6 секунди, или усмерите даљински управљач ка пријемнику и притисните дугме „замахни“ 6 пута, док на дисплеју не буде приказано „77“ или ВиФи лампица не почне да трепери."
 }
