--- a/language/i18n_zh_CN.json
+++ b/language/i18n_zh_CN.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "大烤架+风扇+微波炉",
     "CL_DV_OV_baking_stopped": "## 中的烘烤已停止。",
     "CL_DV_OV_check_to_confirm": "检查烤箱来确认。",
-    "CL_CF_CO_buy": "买"
+    "CL_CF_CO_buy": "买",
+    "CL_CF_CS_window_ac_step_2": "长按“连接”按钮约6秒钟，或将遥控器对准接收器，按“摆动”按钮6次，直到显示屏显示“77”或WiFi灯开始闪烁。"
 }
