--- a/language/i18n_zh_TW.json
+++ b/language/i18n_zh_TW.json
@@ -4001,5 +4001,6 @@
     "CL_DV_OV_g800_mode_grill_fan_micro": "顶部双圈加热+风扇+微波",
     "CL_DV_OV_baking_stopped": "## 烘烤停止。",
     "CL_DV_OV_check_to_confirm": "檢查烤箱以確認。",
-    "CL_CF_CO_buy": "買"
+    "CL_CF_CO_buy": "買",
+    "CL_CF_CS_window_ac_step_2": "按住「連線」按鈕約6秒，或將遙控器對準接收器並按下「搖擺」按鈕6次，直到顯示幕顯示「77」或WiFi指示燈開始閃爍。"
 }
