--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4002,5 +4002,6 @@
     "CL_DV_OV_baking_stopped": "Печенето в ## беше спряно.",
     "CL_DV_OV_check_to_confirm": "Проверете фурната, за да потвърдите.",
     "CL_CF_CO_buy": "Купете",
-    "CL_CF_CS_window_ac_step_2": "Натиснете и задръжте бутона „свързване“ за около 6 секунди или насочете дистанционното управление към приемника и натиснете бутона „люлеене“ 6 пъти, докато дисплеят покаже „77“ или WiFi светлината започне да мига."
+    "CL_CF_CS_window_ac_step_2": "Натиснете и задръжте бутона „свързване“ за около 6 секунди или насочете дистанционното управление към приемника и натиснете бутона „люлеене“ 6 пъти, докато дисплеят покаже „77“ или WiFi светлината започне да мига.",
+    "CL_DV_OV_default_cooking_intensity": "ИНТЕНЗИТЕТ НА ГОТВЕНЕ ПО ПОДРАЗБИРАНЕ"
 }
