--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -921,7 +921,7 @@
     "oven_atag_extra_air_tips": "For healthy indulgences. Now you can have the crispiness and tastiness of fried food without the extra oils.\nThis method of intensive baking using hot air does not require any fat to ensure that perfect crunchy golden crust.\nIn combination with a special perforated baking tray (depending on the model) that lets the air flow all around the dish, you'll achieve even better results.\nSuitable for small cuts of meat, fish, vegetables, and ready-made products, like french fries and chicken nuggets.",
     "oven_atag_extra_frozen_tips": "This efficient baking program is the perfect choice for all frozen food and ready-made meals.",
     "oven_atag_extra_auqa_tips": "AquaClean helps you keep your oven in pristine condition. All you need to do is pour half a liter of water into a baking tray and turn AquaClean on after each use. In just 30 minutes, the results are visible on the surface of the oven and baking trays. Stains and grease are softened and can easily wipe away.",
-    "oven_atag_extra_pizza_tips": "This function is all about gentle, slow and even baking. This way, the moisture is locked inside and the food stays super tender and juicy. Suitable for preparing meat, fish or pastry on one level.",
+    "oven_atag_extra_pizza_tips": "This program, with a baking temperature up to 300 °C, is specifically designed to help you bake the perfect pizza, focaccia, flatbread, and similar baked delicacies.",
     "oven_atag_extra_gentle_tips": "This function is all about gentle, slow and even baking. This way, the moisture is locked inside and the food stays super tender and juicy. Suitable for preparing meat, fish or pastry on one level.",
     "setting_have_sent": "Settings have been sent to oven!",
     "pull_to_refresh": "PULL TO REFRESH",
@@ -1777,7 +1777,7 @@
     "drying_in_x_has_ended": "Drying in ## has ended.",
     "please_close_door": "Please close the door",
     "room_temperature_linkage": "Room Temperature Linkage",
-    "room_temperature_linkage_desc": "After this function is enable, all air conditioners that are online and running will be adjusted to the preset temperature",
+    "room_temperature_linkage_desc": "After this function is enable, all air conditioners that are online and running will be adjusted to the preset temperature.",
     "powered_by_connectlife": "Powered by ConnectLife",
     "wm22_wizard_title_step2": "What colour is your laundry?",
     "wine_inventory": "Wine Inventory",
@@ -1895,7 +1895,7 @@
     "program_name_kids_toys": "Kids toys",
     "program_name_jackets": "Jackets/coats",
     "program_name_sneakers": "Sneakers/slippers",
-    "program_name_cotton_underwear": "Cotton underwear",
+    "program_name_cotton_underwear": "Cotton Underwear",
     "transfer_to_device": "Transfer to device",
     "remote_control_is_disabled": "Remote control is disabled.",
     "wash_finished": "Washing is finished",
@@ -3753,7 +3753,7 @@
     "asko_td_steam_refresh": "Steam Refresh",
     "asko_td_airing": "Airing",
     "asko_td_drum_sanitize": "Drum Sanitize",
-    "gorenje_td_cotton_storage": "CottonStorage",
+    "gorenje_td_cotton_storage": "Cotton Storage",
     "gorenje_td_standard": "Standard",
     "gorenje_td_iron": "Iron",
     "gorenje_td_mix": "Mix",
@@ -3769,7 +3769,7 @@
     "gorenje_td_time": "Time",
     "gorenje_td_steam_refresh": "SteamRefresh",
     "gorenje_td_fast89": "Fast89",
-    "gorenje_td_extra_hygiene": "ExtraHygiene",
+    "gorenje_td_extra_hygiene": "Extra Hygiene",
     "gorenje_td_towels": "Towels",
     "gorenje_td_kids_toys": "Kids Toys",
     "gorenje_td_jackets_coats": "Jackets/Coats",
@@ -3820,7 +3820,7 @@
     "gorenje_wm_ads_jeans": "Jeans",
     "gorenje_wm_ads_new_clothes": "New clothes",
     "gorenje_wm_ads_dark_clothes": "Dark clothes",
-    "gorenje_wm_ads_kids_toys": "Kids toys",
+    "gorenje_wm_ads_kids_toys": "Kids Toys",
     "gorenje_wm_ads_kids": "Kids",
     "gorenje_wm_ads_swimwear": "Swimwear",
     "gorenje_wm_ads_waterproof_clothing": "Waterproof clothing",
@@ -4002,5 +4002,6 @@
     "CL_DV_OV_baking_stopped": "Baking in ## was stopped.",
     "CL_DV_OV_check_to_confirm": "Check the oven to confirm.",
     "CL_CF_CO_buy": "Buy",
-    "CL_CF_CS_window_ac_step_2": "Press and hold the “connect” button for approx 6 secs, or aim the remote controller at the receiver and press the “swing” button 6 times, until the display shows “77”or WiFi light starts flashing."
+    "CL_CF_CS_window_ac_step_2": "Press and hold the “connect” button for approx 6 secs, or aim the remote controller at the receiver and press the “swing” button 6 times, until the display shows “77”or WiFi light starts flashing.",
+    "CL_DV_OV_default_cooking_intensity": "DEFAULT COOKING INTENSITY"
 }
