--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4002,5 +4002,6 @@
     "CL_DV_OV_baking_stopped": "## ішінде пісіру тоқтатылды.",
     "CL_DV_OV_check_to_confirm": "Растау үшін пешті тексеріңіз.",
     "CL_CF_CO_buy": "Сатып алу",
-    "CL_CF_CS_window_ac_step_2": "«Қосылу» түймесін шамамен 6 секунд басып тұрыңыз немесе қашықтан басқару құралын ресиверге бағыттаңыз және дисплейде «77» көрсетілгенше немесе WiFi шамы жыпылықтай бастағанша «айналу» түймесін 6 рет басыңыз."
+    "CL_CF_CS_window_ac_step_2": "«Қосылу» түймесін шамамен 6 секунд басып тұрыңыз немесе қашықтан басқару құралын ресиверге бағыттаңыз және дисплейде «77» көрсетілгенше немесе WiFi шамы жыпылықтай бастағанша «айналу» түймесін 6 рет басыңыз.",
+    "CL_DV_OV_default_cooking_intensity": "ӘДІМДІ ПІСІРУ КЕРЕКТІЛІГІ"
 }
