--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -2768,7 +2768,7 @@
     "nodata_statistics": "Данные недоступны",
     "nodata_statistics_content": "Статистика для выбранного момента не может быть отображена. Это может быть вызвано отключением электроэнергии или ошибкой на датчике. Проверьте ваш винный шкаф. Возможные решения можно найти в руководстве пользователя. Если проблема повторяется, пожалуйста, свяжитесь с нашей службой.",
     "nodata_statistics_to_manual": "Руководство пользователя",
-    "asko_offline": "Ваше устройство находится в автономном режиме. (Vashe ustroystvo nakhoditsya v avtonomnom rezhime.)",
+    "asko_offline": "Ваше оборудование отключется от нитернета.",
     "asko_offline_content_title": "Для восстановления подключения вашего прибора попробуйте следующие решения:",
     "asko_offline_content_o": "Проверьте, подключен ли ваш прибор и включена ли питание.",
     "asko_offline_content_t": "Убедитесь, что ваш шкаф подключен к локальной беспроводной сети.",
@@ -4002,5 +4002,6 @@
     "CL_DV_OV_baking_stopped": "Выпечка в ## была остановлена.",
     "CL_DV_OV_check_to_confirm": "Проверьте духовку, чтобы убедиться.",
     "CL_CF_CO_buy": "Купить",
-    "CL_CF_CS_window_ac_step_2": "Нажмите и удерживайте кнопку «подключиться» в течение примерно 6 секунд или направьте пульт дистанционного управления на приемник и нажмите кнопку «покачивание» 6 раз, пока на дисплее не отобразится «77» или индикатор WiFi не начнет мигать."
+    "CL_CF_CS_window_ac_step_2": "Нажмите и удерживайте кнопку «подключиться» в течение примерно 6 секунд или направьте пульт дистанционного управления на приемник и нажмите кнопку «покачивание» 6 раз, пока на дисплее не отобразится «77» или индикатор WiFi не начнет мигать.",
+    "CL_DV_OV_default_cooking_intensity": "ИНТЕНСИВНОСТЬ ПРИГОТОВЛЕНИЯ ПО УМОЛЧАНИЮ"
 }
