--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4002,5 +4002,6 @@
     "CL_DV_OV_baking_stopped": "Випікання в ## зупинено.",
     "CL_DV_OV_check_to_confirm": "Перевірте духовку, щоб підтвердити.",
     "CL_CF_CO_buy": "купити",
-    "CL_CF_CS_window_ac_step_2": "Натисніть і утримуйте кнопку «підключення» протягом приблизно 6 секунд або спрямуйте пульт дистанційного керування на приймач і натисніть кнопку «гойдання» 6 разів, доки на дисплеї не з’явиться «77» або не почне блимати індикатор WiFi."
+    "CL_CF_CS_window_ac_step_2": "Натисніть і утримуйте кнопку «підключення» протягом приблизно 6 секунд або спрямуйте пульт дистанційного керування на приймач і натисніть кнопку «гойдання» 6 разів, доки на дисплеї не з’явиться «77» або не почне блимати індикатор WiFi.",
+    "CL_DV_OV_default_cooking_intensity": "ІНТЕНСИВНІСТЬ ГОТУВАННЯ ЗА ПРОМОВЧАННЯМ"
 }
