--- a/language/i18n_zh_TW.json
+++ b/language/i18n_zh_TW.json
@@ -921,7 +921,7 @@
     "oven_atag_extra_air_tips": "為健康的嗜好。現在您既可以吃到油炸食品的酥脆可口，又不會增加額外的熱量。這種用熱空氣密集烘焙的方法不需要任何脂肪就能保證完美的金黃色脆皮。結合特殊的穿孔烤盤(根據型號而定)，將盤子的四周完美封裝，您會得到更好的效果。適合小塊的肉，魚，蔬菜和預先準備的冷凍產品，如炸薯條和雞塊。",
     "oven_atag_extra_frozen_tips": "這種高效的烘焙程式是所有冷凍食品和預製餐的完美選擇。",
     "oven_atag_extra_auqa_tips": "“簡單、輕便的清潔。Aqua清潔模式提供了很大的協助清潔烤箱腔。只需要在烤盤中倒入半升水，並在每次烤完後打開水漂。在短短30分鐘內，整個表面和烤盤上都能看到效果。汙漬和油脂被軟化，很容易擦掉。”",
-    "oven_atag_extra_pizza_tips": "這個程式的烘焙溫度高達300度專門設計，以幫助您烘焙出完美的披薩，佛卡夏，大餅和類似的烘焙美食。",
+    "oven_atag_extra_pizza_tips": "這個程式的烘焙溫度高達300度專門設計，以幫助您烘焙出完美地披薩，佛卡夏，大餅和類似的烘焙美食。",
     "oven_atag_extra_gentle_tips": "這個功能是關於溫和，緩慢，甚至烘烤。這樣，水分就會被鎖在裡面，食物就會保持超級鮮嫩多汁。適用於肉類、魚類或糕點的一級加工。",
     "setting_have_sent": "設置已發送到烤箱!",
     "pull_to_refresh": "下拉刷新",
@@ -4002,5 +4002,6 @@
     "CL_DV_OV_baking_stopped": "## 烘烤停止。",
     "CL_DV_OV_check_to_confirm": "檢查烤箱以確認。",
     "CL_CF_CO_buy": "買",
-    "CL_CF_CS_window_ac_step_2": "按住「連線」按鈕約6秒，或將遙控器對準接收器並按下「搖擺」按鈕6次，直到顯示幕顯示「77」或WiFi指示燈開始閃爍。"
+    "CL_CF_CS_window_ac_step_2": "按住「連線」按鈕約6秒，或將遙控器對準接收器並按下「搖擺」按鈕6次，直到顯示幕顯示「77」或WiFi指示燈開始閃爍。",
+    "CL_DV_OV_default_cooking_intensity": "預設烹飪強度"
 }
