--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -4002,5 +4002,6 @@
     "CL_DV_OV_baking_stopped": "Pečení v ## bylo zastaveno.",
     "CL_DV_OV_check_to_confirm": "Zkontrolujte troubu a potvrďte.",
     "CL_CF_CO_buy": "Nakoupit",
-    "CL_CF_CS_window_ac_step_2": "Stiskněte a podržte tlačítko „připojit“ po dobu přibližně 6 sekund nebo namiřte dálkový ovladač na přijímač a stiskněte 6krát tlačítko „swing“, dokud se na displeji nezobrazí „77“ nebo nezačne blikat kontrolka WiFi."
+    "CL_CF_CS_window_ac_step_2": "Stiskněte a podržte tlačítko „připojit“ po dobu přibližně 6 sekund nebo namiřte dálkový ovladač na přijímač a stiskněte 6krát tlačítko „swing“, dokud se na displeji nezobrazí „77“ nebo nezačne blikat kontrolka WiFi.",
+    "CL_DV_OV_default_cooking_intensity": "VÝCHOZÍ INTENZITA VAŘENÍ"
 }
