--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -1850,7 +1850,7 @@
     "STR_PROG_TIME_PROGRAM": "Πρόγραμμα χρόνου",
     "STR_PROG_SELFCLEANING": "Αυτοκαθαριζόμενο",
     "stove": "Κουζίνα",
-    "add_device": "Προσθήκη συσκευής",
+    "add_device": "Προσθέστε συσκευή",
     "get_manuals": "Λάβετε εγχειρίδια",
     "device_not_on_this_list": "Η ΣΥΣΚΕΥΗ ΔΕΝ ΣΕ ΑΥΤΗ ΤΗ ΛΙΣΤΑ",
     "choose_device_category_title": "Επιλέξτε την κατηγορία συσκευής",
@@ -4002,5 +4002,6 @@
     "CL_DV_OV_baking_stopped": "Το ψήσιμο στο ## διακόπηκε.",
     "CL_DV_OV_check_to_confirm": "Ελέγξτε τον φούρνο για επιβεβαίωση.",
     "CL_CF_CO_buy": "Αγορά",
-    "CL_CF_CS_window_ac_step_2": "Πατήστε και κρατήστε πατημένο το κουμπί \"σύνδεση\" για περίπου 6 δευτερόλεπτα ή στοχεύστε το τηλεχειριστήριο προς τον δέκτη και πατήστε το κουμπί \"αιώρησης\" 6 φορές, έως ότου η οθόνη εμφανίσει \"77\" ή η λυχνία WiFi αρχίσει να αναβοσβήνει."
+    "CL_CF_CS_window_ac_step_2": "Πατήστε και κρατήστε πατημένο το κουμπί \"σύνδεση\" για περίπου 6 δευτερόλεπτα ή στοχεύστε το τηλεχειριστήριο προς τον δέκτη και πατήστε το κουμπί \"αιώρησης\" 6 φορές, έως ότου η οθόνη εμφανίσει \"77\" ή η λυχνία WiFi αρχίσει να αναβοσβήνει.",
+    "CL_DV_OV_default_cooking_intensity": "ΠΡΟΕΠΙΛΟΓΗ ΕΝΤΑΣΗ ΜΑΓΕΙΡΕΜΑΤΟΣ"
 }
