--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -4002,5 +4002,6 @@
     "CL_DV_OV_baking_stopped": "Leipominen vuonna ## lopetettiin.",
     "CL_DV_OV_check_to_confirm": "Tarkista uuni vahvistaaksesi.",
     "CL_CF_CO_buy": "Ostaa",
-    "CL_CF_CS_window_ac_step_2": "Paina “connect”-painiketta ja pidä sitä painettuna noin 6 sekuntia tai suuntaa kaukosäädin vastaanottimeen ja paina “swing”-painiketta 6 kertaa, kunnes näytössä näkyy “77” tai WiFi-valo alkaa vilkkua."
+    "CL_CF_CS_window_ac_step_2": "Paina “connect”-painiketta ja pidä sitä painettuna noin 6 sekuntia tai suuntaa kaukosäädin vastaanottimeen ja paina “swing”-painiketta 6 kertaa, kunnes näytössä näkyy “77” tai WiFi-valo alkaa vilkkua.",
+    "CL_DV_OV_default_cooking_intensity": "OLETUSKYPSENNYSINTENSITEETTI"
 }
