--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -4002,5 +4002,6 @@
     "CL_DV_OV_baking_stopped": "Pečenje u ## je zaustavljeno.",
     "CL_DV_OV_check_to_confirm": "Provjerite pećnicu za potvrdu.",
     "CL_CF_CO_buy": "Kupiti",
-    "CL_CF_CS_window_ac_step_2": "Pritisnite i držite tipku \"connect\" otprilike 6 sekundi ili usmjerite daljinski upravljač prema prijemniku i pritisnite tipku \"swing\" 6 puta, dok se na zaslonu ne prikaže \"77\" ili dok WiFi svjetlo ne počne treperiti."
+    "CL_CF_CS_window_ac_step_2": "Pritisnite i držite tipku \"connect\" otprilike 6 sekundi ili usmjerite daljinski upravljač prema prijemniku i pritisnite tipku \"swing\" 6 puta, dok se na zaslonu ne prikaže \"77\" ili dok WiFi svjetlo ne počne treperiti.",
+    "CL_DV_OV_default_cooking_intensity": "ZADANI INTENZITET KUHANJA"
 }
