--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -4002,5 +4002,6 @@
     "CL_DV_OV_baking_stopped": "Memanggang di ## dihentikan.",
     "CL_DV_OV_check_to_confirm": "Periksa oven untuk mengonfirmasi.",
     "CL_CF_CO_buy": "Membeli",
-    "CL_CF_CS_window_ac_step_2": "Tekan dan tahan tombol “connect” selama sekitar 6 detik, atau arahkan remote kontrol ke penerima dan tekan tombol “swing” 6 kali, hingga layar menunjukkan “77” atau lampu WiFi mulai berkedip."
+    "CL_CF_CS_window_ac_step_2": "Tekan dan tahan tombol “connect” selama sekitar 6 detik, atau arahkan remote kontrol ke penerima dan tekan tombol “swing” 6 kali, hingga layar menunjukkan “77” atau lampu WiFi mulai berkedip.",
+    "CL_DV_OV_default_cooking_intensity": "INTENSITAS MEMASAK DEFAULT"
 }
