--- a/language/i18n_ku_TR.json
+++ b/language/i18n_ku_TR.json
@@ -1850,7 +1850,7 @@
     "STR_PROG_TIME_PROGRAM": "",
     "STR_PROG_SELFCLEANING": "",
     "stove": "",
-    "add_device": "",
+    "add_device": "Amûrê zêde bike",
     "get_manuals": "",
     "device_not_on_this_list": "",
     "choose_device_category_title": "",
@@ -4002,5 +4002,6 @@
     "CL_DV_OV_baking_stopped": "",
     "CL_DV_OV_check_to_confirm": "",
     "CL_CF_CO_buy": "Kirrîn",
-    "CL_CF_CS_window_ac_step_2": ""
+    "CL_CF_CS_window_ac_step_2": "",
+    "CL_DV_OV_default_cooking_intensity": ""
 }
