--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -921,7 +921,7 @@
     "oven_atag_extra_air_tips": "Voor gezonde verwennerijen. Nu kunt u genieten van de knapperigheid en smaak van gefrituurd voedsel zonder de extra calorieën.\nDeze methode van extreem intensief bakken met hete lucht vereist geen vet om die perfect heerlijke knapperige gouden korst te garanderen.\nIn combinatie met speciale geperforeerde bakplaat, (afhankelijk van het model), die het gerecht rondom perfect inkapselen, behaalt u nog betere resultaten.\nGeschikt voor kleine stukjes vlees, vis, groenten en kant-en-klare diepvriesproducten, zoals frites en kipnuggets.",
     "oven_atag_extra_frozen_tips": "Dit efficiënte bakprogramma is de perfecte keuze voor alle diepvriesproducten en kant-en-klaarmaaltijden.",
     "oven_atag_extra_auqa_tips": "AquaClean helpt u uw oven in onberispelijke staat te houden. Het enige wat u hoeft te doen is een halve liter water in een bakplaat gieten en AquaClean na elk gebruik inschakelen. In slechts 30 minuten zijn de resultaten zichtbaar op het oppervlak van de oven en bakplaten. Vlekken en vet worden zachter en kunnen gemakkelijk worden weggeveegd.",
-    "oven_atag_extra_pizza_tips": "Dit programma met instelling van de baktemperatuur tot 300o C is speciaal ontworpen om u te helpen bij het bakken van de perfecte pizza, focaccia, flatbread en soortgelijke gebakken lekkernijen.",
+    "oven_atag_extra_pizza_tips": "Dit programma met instelling van de baktemperatuur tot 300 °C is speciaal ontworpen om u te helpen bij het bakken van de perfecte pizza, focaccia, flatbread en soortgelijke gebakken lekkernijen.",
     "oven_atag_extra_gentle_tips": "Bij deze functie draait alles om zacht, langzaam en gelijkmatig bakken. Zo wordt het vocht binnenin opgesloten en blijft het eten super mals en sappig. Geschikt voor het bereiden van vlees, vis of gebak op één niveau.",
     "setting_have_sent": "Instellingen zijn naar de oven verzonden!",
     "pull_to_refresh": "TREK OM TE VERNIEUWEN",
@@ -4002,5 +4002,6 @@
     "CL_DV_OV_baking_stopped": "Het bakken in ## is gestopt.",
     "CL_DV_OV_check_to_confirm": "Controleer de oven om dit te bevestigen.",
     "CL_CF_CO_buy": "Kopen",
-    "CL_CF_CS_window_ac_step_2": "Houd de knop “connect” ongeveer 6 seconden ingedrukt, of richt de afstandsbediening op de ontvanger en druk 6 keer op de knop “swing”, totdat op het display “77” verschijnt of het wifi-lampje begint te knipperen."
+    "CL_CF_CS_window_ac_step_2": "Houd de knop “connect” ongeveer 6 seconden ingedrukt, of richt de afstandsbediening op de ontvanger en druk 6 keer op de knop “swing”, totdat op het display “77” verschijnt of het wifi-lampje begint te knipperen.",
+    "CL_DV_OV_default_cooking_intensity": "STANDAARD KOOKINTENSITEIT"
 }
