--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -4002,5 +4002,6 @@
     "CL_DV_OV_baking_stopped": "Pieczenie w ## zostało zatrzymane.",
     "CL_DV_OV_check_to_confirm": "Sprawdź piekarnik, aby potwierdzić.",
     "CL_CF_CO_buy": "Kupić",
-    "CL_CF_CS_window_ac_step_2": "Naciśnij i przytrzymaj przycisk „connect” przez około 6 sekund lub skieruj pilota na odbiornik i naciśnij przycisk „swing” 6 razy, aż na wyświetlaczu pojawi się „77” lub dioda WiFi zacznie migać."
+    "CL_CF_CS_window_ac_step_2": "Naciśnij i przytrzymaj przycisk „connect” przez około 6 sekund lub skieruj pilota na odbiornik i naciśnij przycisk „swing” 6 razy, aż na wyświetlaczu pojawi się „77” lub dioda WiFi zacznie migać.",
+    "CL_DV_OV_default_cooking_intensity": "DOMYŚLNA INTENSYWNOŚĆ GOTOWANIA"
 }
