--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -4002,5 +4002,6 @@
     "CL_DV_OV_baking_stopped": "Bakningen i ## stoppades.",
     "CL_DV_OV_check_to_confirm": "Kontrollera ugnen för att bekräfta.",
     "CL_CF_CO_buy": "Köpa",
-    "CL_CF_CS_window_ac_step_2": "Tryck och håll \"anslut\"-knappen i ca 6 sekunder, eller rikta fjärrkontrollen mot mottagaren och tryck på \"swing\"-knappen 6 gånger, tills displayen visar \"77\" eller WiFi-lampan börjar blinka."
+    "CL_CF_CS_window_ac_step_2": "Tryck och håll \"anslut\"-knappen i ca 6 sekunder, eller rikta fjärrkontrollen mot mottagaren och tryck på \"swing\"-knappen 6 gånger, tills displayen visar \"77\" eller WiFi-lampan börjar blinka.",
+    "CL_DV_OV_default_cooking_intensity": "STANDARD TILLAGNINGSINTENSITET"
 }
