--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4002,5 +4002,6 @@
     "CL_DV_OV_baking_stopped": "การอบใน ## หยุดแล้ว",
     "CL_DV_OV_check_to_confirm": "ตรวจสอบเตาอบเพื่อยืนยัน",
     "CL_CF_CO_buy": "ซื้อ",
-    "CL_CF_CS_window_ac_step_2": "กดปุ่ม “เชื่อมต่อ” ค้างไว้ประมาณ 6 วินาที หรือเล็งรีโมทคอนโทรลไปที่ตัวรับและกดปุ่ม “สวิง” 6 ครั้ง จนกระทั่งหน้าจอแสดง “77” หรือไฟ WiFi เริ่มกะพริบ"
+    "CL_CF_CS_window_ac_step_2": "กดปุ่ม “เชื่อมต่อ” ค้างไว้ประมาณ 6 วินาที หรือเล็งรีโมทคอนโทรลไปที่ตัวรับและกดปุ่ม “สวิง” 6 ครั้ง จนกระทั่งหน้าจอแสดง “77” หรือไฟ WiFi เริ่มกะพริบ",
+    "CL_DV_OV_default_cooking_intensity": "ความเข้มข้นในการปรุงอาหารเริ่มต้น"
 }
