--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -4002,5 +4002,6 @@
     "CL_DV_OV_baking_stopped": "##'da pişirme işlemi durduruldu.",
     "CL_DV_OV_check_to_confirm": "Onaylamak için fırını kontrol edin.",
     "CL_CF_CO_buy": "Satın almak",
-    "CL_CF_CS_window_ac_step_2": "“Bağlan” butonuna yaklaşık 6 saniye basılı tutun veya uzaktan kumandayı alıcıya doğrultun ve ekranda “77” yazısı görünene veya WiFi ışığı yanıp sönmeye başlayana kadar “salınım” butonuna 6 kez basın."
+    "CL_CF_CS_window_ac_step_2": "“Bağlan” butonuna yaklaşık 6 saniye basılı tutun veya uzaktan kumandayı alıcıya doğrultun ve ekranda “77” yazısı görünene veya WiFi ışığı yanıp sönmeye başlayana kadar “salınım” butonuna 6 kez basın.",
+    "CL_DV_OV_default_cooking_intensity": "ÖN TANIMLI PİŞİRME YOĞUNLUĞU"
 }
